samples/_failures_safe/1761086279_0f87ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35ecf259.c: In function ‘main’:
./samples/SAFE/__tmp_35ecf259.c:158:47: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  158 |                 status = add_matrices(&mat1, &mat
      |                                               ^~~
      |                                               mat2
./samples/SAFE/__tmp_35ecf259.c:158:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_35ecf259.c:158:50: error: expected ‘)’ at end of input
  158 |                 status = add_matrices(&mat1, &mat
      |                                      ~           ^
      |                                                  )
./samples/SAFE/__tmp_35ecf259.c:158:26: error: too few arguments to function ‘add_matrices’
  158 |                 status = add_matrices(&mat1, &mat
      |                          ^~~~~~~~~~~~
./samples/SAFE/__tmp_35ecf259.c:88:5: note: declared here
   88 | int add_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_35ecf259.c:158:17: error: expected declaration or statement at end of input
  158 |                 status = add_matrices(&mat1, &mat
      |                 ^~~~~~
./samples/SAFE/__tmp_35ecf259.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35ecf259.c:158:17: error: expected declaration or statement at end of input
